# vrmnx-toruo

./: .gitignore  FOR_DEVELOPERS.md  LICENSE  README.md  make.bat  pyproject.toml  readme-toruo.txt  requirements.txt  setup.py  toruo-for-vrmnx.bat  toruo-for-vrmonlinenx.bat  toruo.json  toruo.py  vrmapi.py
docs/: .buildinfo  genindex.html  history.html  index.html  objects.inv  py-modindex.html  quickstart.html  saving.html  search.html  searchindex.js  sitemap.xml  toruo.html
docs-src/: conf.py  history.md  index.rst  quickstart.md  toruo.rst
docs/_modules/: index.html  toruo.html
docs/_sources/: history.md.txt  index.rst.txt  quickstart.md.txt  saving.md.txt  toruo.rst.txt
docs/_static/: documentation_options.js
docs/doctrees/: environment.pickle  history.doctree  index.doctree  quickstart.doctree  toruo.doctree
docs/source/: conf.py  conf_.py  vrmapi.rst
release/toruo_v3.0.3/: readme.txt  toruo.py
source/: conf.py  index.rst  modules.rst
source/api/: toruo.activate.rst  toruo.jump_toruo.rst  toruo.matrixproduct.rst  toruo.setfactor.rst  toruo.setshakemode.rst  toruo.turnmatrix.rst  toruo.vecadd.rst  toruo.vecdistance.rst  toruo.vecdot.rst  toruo.veclen.rst  toruo.vectrans.rst  toruo.xrot_matrix3d.rst  toruo.yrot_matrix3d.rst  toruo.zrot_matrix3d.rst
